--- a/exercise.tex
+++ b/exercise.tex
@@ -6,15 +6,72 @@
 \input{layout}
 
 % タイトルと氏名を変更せよ．
-\title{タイトル}
-\author{蓑原 隆}
+\title{日本におけるデジタル化の状況}
+\author{G584452025 櫻井 暖真}
 
 \begin{document}
 
 \maketitle %ここにタイトルが入る
 
 % ここから本文
-% 節見出し: \section{}
+\section{デジタル競争力ランキング}
+
+
+国際経営開発研究所（IMD）の調査 \cite{imd} によると、
+日本のデジタル競争力のランキングは図\ref{fig:ranking} に示すように、
+調査対象の64カ国中、総合で28位、知識項目で25位となっている。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1\textwidth]{fig31.png} % 実際の画像に差し替えてください
+    \caption{デジタル競争力ランキング（64カ国中）}
+    \label{fig:ranking}
+\end{figure}
+
+\section{ブローバンドの整備状況}
+OECDによるブロードバンド回線の普及に関する調査 \cite{oecd} によると、
+表\ref{tab:broadband} に示すように、
+日本における100人あたりのモバイルブロードバンドの加入者数は190.5で、
+第1位となっている。2位はエストニアで、3位は韓国と続く。
+
+\begin{table}[htbp]
+    \centering
+    \caption{モバイルブロードバンドの加入者数（100人あたり）}
+    \label{tab:broadband}
+    \begin{tabular}{|c|l|c|}
+        \hline
+        順位 & 国名 & 加入者数 \\
+        \hline
+        １位 & 日本 & 190.5 \\
+        \hline
+        ２位 & エストニア & 170.9 \\
+        \hline
+        ３位 & 米国 & 169.0 \\
+        \hline
+        ４位 & フィンランド & 157.0 \\
+        \hline
+        ５位 & デンマーク & 141.7 \\
+        \hline
+        ６位 & ラトビア & 141.6 \\
+        \hline
+        ７位 & イスラエル & 139.9 \\
+        \hline
+        ８位 & オランダ & 133.7 \\
+        \hline
+        ９位 & ポーランド & 131.3 \\
+        \hline
+        １０位 & スウェーデン & 127.2 \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\section{考察}
+\begin{itemize}
+    \item 日本はモバイルブロードバンドの普及率が非常に高い
+    \item インフラ面では世界トップレベルにあることがわかる。
+    \item デジタル競争力は他国と比べて低く、特に知識や技術の活用面に課題があると考えられる。
+\end{itemize}
+
 % を使う
 
 % 本文(1)
